# docs/swagger.yaml
@@ -1,34 +1,5 @@
 components:
   schemas:
-    constants.StatData:
-      properties:
-        cap:
-          type: integer
-        category:
-          type: string
-        color:
-          type: string
-        description:
-          type: string
-        disabledOnPrivateIsland:
-          type: boolean
-        id:
-          type: string
-        name:
-          type: string
-        nameLore:
-          type: string
-        nameShort:
-          type: string
-        nameTiny:
-          type: string
-        percent:
-          type: boolean
-        suffix:
-          type: string
-        symbol:
-          type: string
-      type: object
     models.ArmorResult:
       properties:
         armor:
@@ -1837,6 +1808,35 @@ components:
         name:
           type: string
       type: object
+    models.StatData:
+      properties:
+        cap:
+          type: integer
+        category:
+          type: string
+        color:
+          type: string
+        description:
+          type: string
+        disabledOnPrivateIsland:
+          type: boolean
+        id:
+          type: string
+        name:
+          type: string
+        nameLore:
+          type: string
+        nameShort:
+          type: string
+        nameTiny:
+          type: string
+        percent:
+          type: boolean
+        suffix:
+          type: string
+        symbol:
+          type: string
+      type: object
     models.Stats:
       properties:
         stats:
@@ -2395,9 +2395,7 @@ paths:
             application/json:
               schema:
                 items:
-                  items:
-                    $ref: '#/components/schemas/constants.StatData'
-                  type: array
+                  $ref: '#/components/schemas/models.StatData'
                 type: array
           description: Player stats constants returned successfully.
       summary: List player stats constants
